# amgorithms-Project-4-Server

./: .gitignore  Dockerfile  Pipfile  manage.py  pyproject.toml
foods/: admin.py  authentication.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
foods/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_food_quantity_alter_food_wasted.py  0004_alter_food_quantity_alter_food_wasted.py  0005_foodwastefact.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
waste_not/: asgi.py  settings.py  urls.py  wsgi.py
